--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,72 @@
+ansible==2.9.6
+asn1crypto==0.24.0
+attrs==19.3.0
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+bcrypt==3.1.6
+bleach==3.1.5
+configparser==4.0.2
+contextlib2==0.6.0.post1
+cryptography==2.6.1
+dbus-python==1.2.12
+decorator==4.4.2
+defusedxml==0.6.0
 dj-database-url==0.5.0                                                                                                                                                
 Django==2.1.5
-django-heroku==0.3.1                                                                                                                                                    django-heroku==0.3.1                                                                                                                                                  
-gunicorn==19.9.0                                                                                                                                                      
-psycopg2==2.7.5                                                                                                                                                     
-pytz==2018.9                                                                                                                                                          
+django-heroku==0.3.1
+entrypoints==0.3
+enum34==1.1.6
+functools32==3.2.3.post2
+futures==3.3.0
+gunicorn==19.9.0
+httplib2==0.11.3
+importlib-metadata==1.6.0
+ipaddress==1.0.17
+ipykernel==4.10.1
+ipython==5.10.0
+ipython-genutils==0.2.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==5.3.4
+jupyter-core==4.6.3
+keyring==18.0.1
+keyrings.alt==3.1.1
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==4.4.0
+notebook==5.7.9
+packaging==20.3
+pandocfilters==1.4.2
+paramiko==2.6.0
+pathlib2==2.3.5
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.7.1
+prompt-toolkit==1.0.18
+psycopg2==2.7.7
+ptyprocess==0.6.0
+pycrypto==2.6.1
+PyGObject==3.34.0
+PyNaCl==1.3.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+python-dateutil==2.8.1
+pytz==2018.9
+pyxdg==0.25
+PyYAML==5.1.2
+pyzmq==19.0.1
+scandir==1.10.0
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.12.0
+terminado==0.8.3
+testpath==0.4.4
+tornado==5.1.1
+traitlets==4.3.3
+wcwidth==0.1.9
+webencodings==0.5.1
 whitenoise==4.1.2
+zipp==1.2.0
